--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "private": false,
   "displayName": "Homebridge Tuya IR Platform",
-  "name": "homebridge-tuya-ir",
-  "version": "1.0.6",
+  "name": "@donkeystudio/homebridge-tuya-ir",
+  "version": "1.1.2",
   "description": "Allows homebridge to control Tuya IR Blaster based devices",
   "license": "Apache-2.0",
+  "author": {
+    "name": "Donkey Studio",
+    "email": "donkey.studi0311@gmail.com",
+    "url": "https://github.com/donkeystudio"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/donkeystudio/homebridge-tuya-ir.git"
